--- a/style/style.css
+++ b/style/style.css
@@ -73,3 +73,10 @@
     height: 100px;
     background-color: rgba(4, 76, 134, 0.822);
 }
+
+.items a{
+    text-decoration: none;
+    list-style: none;
+    color: #fff;        
+}
+
